--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,24 +1,9 @@
-[theme]
-base = "dark"
-primaryColor = "#1ABC9C"
-backgroundColor = "#040914"
-secondaryBackgroundColor = "#0b1426"
-textColor = "#f8fafc"
-font = "Inter"
-
-[theme.light]
-base = "light"
-primaryColor = "#FF6B2C"
-backgroundColor = "#f5f7fb"
-secondaryBackgroundColor = "#ffffff"
-textColor = "#1f2937"
-
-[theme.dark]
-base = "dark"
-primaryColor = "#1ABC9C"
-backgroundColor = "#040914"
-secondaryBackgroundColor = "#0b1426"
-textColor = "#f8fafc"
+﻿[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#0E1117"
+secondaryBackgroundColor = "#262730"
+textColor = "#FAFAFA"
+font = "sans-serif"
 
 [server]
 enableCORS = true
@@ -31,163 +16,3 @@ gatherUsageStats = false
 [client]
 showErrorDetails = true
 toolbarMode = "minimal"
-
-[unified_ui.assets]
-logo_path = "unified_ui/static/logo.png"
-
-[unified_ui.sidebar]
-title = "D-FLARE Unified"
-tagline = "跨品牌威脅分析流程，以一致的體驗呈現。"
-description = "所有模組共用相同的視覺語言與互動效果，確保跨品牌的一致體驗。"
-customize_help = "想要更多自訂？可參考 `.streamlit/config.toml` 與 `config sample.toml` 了解更多設定方式。"
-order = ["Fortinet", "Cisco"]
-
-[unified_ui.sidebar.options.Fortinet]
-icon = "🛡️"
-badge = "Fortinet"
-description = "Fortinet 版本提供完整的訓練、ETL、推論與通知流程。"
-
-[unified_ui.sidebar.options.Cisco]
-icon = "📡"
-badge = "Cisco"
-description = "Cisco 版本專注於 ASA log 擷取、模型推論與跨平台通知。"
-
-[unified_ui.design]
-default_theme = "dark"
-
-[unified_ui.design.theme_presets.dark]
-color_mode = "dark"
-background = "#040914"
-surface = "#0b1426"
-surface_muted = "#15213a"
-surface_border = "rgba(120, 144, 180, 0.28)"
-surface_shadow = "0 42px 88px -48px rgba(4, 8, 20, 0.9)"
-sidebar_background = "#060f1f"
-sidebar_text = "#f8fafc"
-sidebar_muted = "#94a3b8"
-sidebar_button_hover = "rgba(26, 188, 156, 0.18)"
-sidebar_icon = "#f8fafc"
-sidebar_icon_hover = "#8be9dd"
-text_primary = "#f8fafc"
-text_secondary = "#cbd5f5"
-text_body = "#d8e1ff"
-text_caption = "#a0b4d8"
-text_label = "#d8e1ff"
-text_h1 = "#ffffff"
-text_h2 = "#f1f5ff"
-text_h3 = "#e2e8ff"
-card_background = "#111d34"
-card_border = "rgba(120, 144, 180, 0.34)"
-card_shadow = "0 36px 72px -42px rgba(5, 10, 22, 0.92)"
-primary = "#1ABC9C"
-primary_hover = "#38bdf8"
-primary_shadow = "rgba(26, 188, 156, 0.45)"
-secondary_start = "#38bdf8"
-secondary_end = "#6366f1"
-secondary_hover = "#22d3ee"
-warning = "#facc15"
-warning_emphasis = "#f59e0b"
-alert_icon_bg = "rgba(250, 204, 21, 0.24)"
-alert_icon_color = "#ffffff"
-expander_header = "#162441"
-expander_background = "#101a30"
-code_background = "#0b1220"
-input_background = "#0a121f"
-input_border = "#3b4f6d"
-muted_border = "rgba(120, 144, 180, 0.38)"
-upload_background = "#101a2d"
-upload_border = "rgba(26, 188, 156, 0.35)"
-upload_text = "#f8fafc"
-hover_glow = "0 32px 64px -34px rgba(26, 188, 156, 0.55)"
-sidebar_badge_background = "rgba(26, 188, 156, 0.24)"
-
-[unified_ui.design.theme_presets.light]
-color_mode = "light"
-background = "#f5f7fb"
-surface = "#ffffff"
-surface_muted = "#eef2ff"
-surface_border = "#d8e0f0"
-surface_shadow = "0 32px 64px -46px rgba(15, 23, 42, 0.2)"
-sidebar_background = "#f1f5f9"
-sidebar_text = "#0f172a"
-sidebar_muted = "#64748b"
-sidebar_button_hover = "rgba(15, 23, 42, 0.08)"
-sidebar_icon = "#0f172a"
-sidebar_icon_hover = "#1f2937"
-text_primary = "#1f2937"
-text_secondary = "#475569"
-text_body = "#333333"
-text_caption = "#555555"
-text_label = "#404040"
-text_h1 = "#1a1a1a"
-text_h2 = "#202020"
-text_h3 = "#303030"
-card_background = "#ffffff"
-card_border = "#d9e2f1"
-card_shadow = "0 24px 54px -34px rgba(15, 23, 42, 0.22)"
-primary = "#FF6B2C"
-primary_hover = "#FF834D"
-primary_shadow = "rgba(255, 107, 44, 0.32)"
-secondary_start = "#1ABC9C"
-secondary_end = "#9B59B6"
-secondary_hover = "#22a68c"
-warning = "#FFC107"
-warning_emphasis = "#ff9800"
-alert_icon_bg = "rgba(255, 193, 7, 0.18)"
-alert_icon_color = "#7a5200"
-expander_header = "#e4ecfb"
-expander_background = "#f5f8ff"
-code_background = "#eef2ff"
-input_background = "#ffffff"
-input_border = "#d0d6eb"
-muted_border = "#d8e0f0"
-upload_background = "#ffffff"
-upload_border = "#ffd4bc"
-upload_text = "#0f172a"
-hover_glow = "0 28px 60px -32px rgba(255, 107, 44, 0.35)"
-sidebar_badge_background = "rgba(255, 107, 44, 0.16)"
-
-[unified_ui.design.hero.default]
-start = "#6366f1"
-end = "#8b5cf6"
-shadow = "rgba(99, 102, 241, 0.45)"
-icon = "🧭"
-eyebrow = "Unified Threat Analytics"
-
-[unified_ui.design.hero.Fortinet]
-start = "#f97316"
-end = "#ef4444"
-shadow = "rgba(239, 68, 68, 0.45)"
-icon = "🛡️"
-eyebrow = "Fortinet 安全平台"
-
-[unified_ui.design.hero.Cisco]
-start = "#38bdf8"
-end = "#2563eb"
-shadow = "rgba(37, 99, 235, 0.45)"
-icon = "📡"
-eyebrow = "Cisco 安全平台"
-
-[unified_ui.design.feature_variants.primary]
-accent_gradient = ["#f97316", "#ef4444"]
-body_background = "rgba(248, 113, 113, 0.12)"
-border = "rgba(248, 113, 113, 0.45)"
-icon_background = "rgba(255, 255, 255, 0.2)"
-icon_color = "#ffffff"
-hover_glow = "0 28px 54px -28px rgba(239, 68, 68, 0.65)"
-
-[unified_ui.design.feature_variants.secondary]
-accent_gradient = ["#38bdf8", "#6366f1"]
-body_background = "rgba(59, 130, 246, 0.14)"
-border = "rgba(59, 130, 246, 0.45)"
-icon_background = "rgba(255, 255, 255, 0.22)"
-icon_color = "#ffffff"
-hover_glow = "0 28px 54px -28px rgba(59, 130, 246, 0.6)"
-
-[unified_ui.design.feature_variants.alert]
-accent_gradient = ["#facc15", "#f97316"]
-body_background = "rgba(250, 204, 21, 0.16)"
-border = "rgba(250, 204, 21, 0.55)"
-icon_background = "rgba(255, 255, 255, 0.18)"
-icon_color = "#1f2937"
-hover_glow = "0 28px 54px -28px rgba(250, 204, 21, 0.6)"
