--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,38 @@
-﻿[theme]
-primaryColor = "#FF4B4B"
-backgroundColor = "#0E1117"
-secondaryBackgroundColor = "#262730"
-textColor = "#FAFAFA"
-font = "sans-serif"
+[theme]
+base = "light"
+primaryColor = "#ff7a2a"
+backgroundColor = "#f7f9fc"
+secondaryBackgroundColor = "#ffffff"
+textColor = "#0f172a"
+font = "Inter"
+
+[theme.light]
+primaryColor = "#ff7a2a"
+backgroundColor = "#f7f9fc"
+secondaryBackgroundColor = "#ffffff"
+textColor = "#0f172a"
+linkColor = "#ff6a00"
+base = "light"
+
+[theme.light.sidebar]
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f1f5f9"
+textColor = "#1f2937"
+borderColor = "#e2e8f0"
+
+[theme.dark]
+primaryColor = "#00c6ff"
+backgroundColor = "#040a18"
+secondaryBackgroundColor = "#0b1426"
+textColor = "#e2e8f0"
+linkColor = "#00b2ff"
+base = "dark"
+
+[theme.dark.sidebar]
+backgroundColor = "#050d1c"
+secondaryBackgroundColor = "#0b1528"
+textColor = "#cbd5f5"
+borderColor = "#16233c"
 
 [server]
 enableCORS = true
