--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 # 忽略全部檔案
 *
-*.csv
-*.rar
-*.zip
-*.tar
-*.gz
-*.log
 *.pyc
 
 # 保留資料夾（這行確保 Git 會繼續往下看子資料夾）
@@ -21,8 +15,16 @@
 !*.md
 !*.css
 !*.html
-!*.toml
-!.gitignore
+!*.toml  ##streamlit設定檔
+!.gitignore     ## 保留 .gitignore 檔案本身
+!*.csv
+!*.rar
+!*.zip
+!*.tar
+!*.gz
+!*.log
+!*.streamlit
+
 
 # 略過資料夾
 /作者github資料
