--- a/logfetcher_settings.json
+++ b/logfetcher_settings.json
@@ -1,6 +1,6 @@
 {
-  "save_dir": "",
-  "binary_model_path": "",
-  "model_path": "",
-  "clean_csv_dir": ""
+  "save_dir": "C:\\Users\\ch3njay\\AppData\\Local\\Temp\\tmpm2urkhjz",
+  "binary_model_path": "/tmp/test_binary.pkl",
+  "model_path": "/tmp/test_multi.pkl",
+  "clean_csv_dir": "/tmp/clean"
 }
